Feature Replication Updates (#27)
Integrate Feature Replication Updates
---------

Co-authored-by: jstier <stier.jochen@web.de>
Co-authored-by: bherfort <benjamin.herfort@heigit.org>